[package]
name = "vclust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
chrono = "*"
crossbeam-channel = { version = "0.5.13" }
env_logger = "0.10.0"
itertools = "*"
log = "0.4"
logaddexp = "*"
rust-htslib = { version = "0.46.0", default-features = false }

[profile.release]
opt-level = 3
debug = true
lto = true
codegen-units = 1
incremental = false
